--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -37,6 +37,7 @@
   <div id="container">
     {% include header.html %}
     {{ content }}
+    {% include footer.html %}
   </div>
 </body>
 </html>
