--- a/_sass/partials/_fonts.sass
+++ b/_sass/partials/_fonts.sass
@@ -25,7 +25,8 @@
 
 h1
   :font-family "Titillium3", Georgia, "Times New Roman", Times, serif !important
-  
+  :color #a69c91 !important
+
   a
     :color #a69c91 !important
     :text-decoration none !important
@@ -45,9 +46,6 @@ h3
   &#comments
     :font-size 1.6em
 
-pre, code
-  :font-family 'Anonymous Pro' !important
-
 input
   :font-family "Titillium2", Georgia, "Times New Roman", Times, serif !important  
 
@@ -63,6 +61,21 @@ input
 
     &:hover
       :text-decoration underline !important
+
+#footer
+  p
+    :font-family "Titillium2", Georgia, "Times New Roman", Times, serif !important
+    :color #68454c !important
+    :margin 0 !important
+
+  a
+    :font-family "Titillium4", Georgia, "Times New Roman", Times, serif !important
+    :color #68454c !important
+    :text-decoration none !important
+
+    &:hover
+      :text-decoration underline !important
+
 
 #content
   p
