--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -34,7 +34,7 @@
 </head>
 
 <body class="bp">
-  <div id="container">
+  <div id="container" class="container">
     {% include header.html %}
     {{ content }}
     {% include footer.html %}
