--- a/_sass/screen.sass
+++ b/_sass/screen.sass
@@ -23,12 +23,15 @@ body.bp
   // Remove the scaffolding when you're ready to start doing visual design.
   // Or leave it in if you're happy with how blueprint looks out-of-the-box
   :background #343434
+  :text-align center
+  :margin 0 auto
+  :width 800px
+
+#container
+  :text-align left
 
 form.bp
   +blueprint-form
-
-#container
-  :margin 0 auto
 
 #wrap-post
   :background-image url(/images/band2.png)
