--- a/stylesheets/screen.css
+++ b/stylesheets/screen.css
@@ -87,7 +87,7 @@ body.bp caption { background: #eee; }
 body.bp .quiet { color: #666666; }
 body.bp .loud { color: #111111; }
 
-body.bp { background: #343434; }
+body.bp { background: #343434; text-align: center; margin: 0 auto; width: 800px; }
 body.bp .clear { clear: both; }
 body.bp .nowrap { white-space: nowrap; }
 body.bp .clearfix { overflow: hidden; display: inline-block; }
@@ -110,6 +110,8 @@ body.bp .highlight { background: yellow; }
 body.bp .added { background: #006600; color: white; }
 body.bp .removed { background: #990000; color: white; }
 
+#container { text-align: left; }
+
 form.bp label { font-weight: bold; }
 form.bp fieldset { padding: 1.4em; margin: 0 0 1.5em 0; }
 form.bp legend { font-weight: bold; font-size: 1.2em; }
@@ -123,8 +125,6 @@ form.bp input.text, form.bp input.title, form.bp textarea, form.bp select { bord
 form.bp input.text:focus, form.bp input.title:focus, form.bp textarea:focus, form.bp select:focus { border: 1px solid #666666; }
 form.bp input.text, form.bp input.title { width: 300px; }
 form.bp textarea { width: 390px; height: 250px; }
-
-#container { margin: 0 auto; }
 
 #wrap-post { background-image: url(/images/band2.png); background-repeat: repeat-y; }
 
