Tweaks for code syntax highlighting
Signed-off-by: Alex Coles <alex@alexcolesportfolio.com>

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -27,7 +27,7 @@ if (location.href.match(/localhost/)) {
     </div>
   </div>
   <div id="post-content">
-    <p>{{ content }}</p>
+    {{ content }}
   </div>
   <div id="wrap-post">
     &nbsp;
