--- a/_sass/partials/_fonts.sass
+++ b/_sass/partials/_fonts.sass
@@ -20,7 +20,7 @@
 
 @font-face
   :font-family 'Anonymous Pro'
-  :src url(Anonymous Pro.ttf) format('ttf')
+  :src url(AnonymousPro.ttf) format('truetype')
 
 
 h1
