--- a/_sass/screen.sass
+++ b/_sass/screen.sass
@@ -68,9 +68,9 @@ form.bp
   :padding-top 30px
   :padding-bottom 30px
   :margin-bottom -20px
-  p, li, span, a, h1, h2, h3, pre, code
+  p, li, a, h1, h2, h3
     :color #210d11 !important
-  p, li, span
+  p, li
     :font-family 'Titillium2' !important
     :font-size 120%
   a
@@ -78,9 +78,18 @@ form.bp
     :text-decoration none !important
   h1, h2, h3
     :font-family 'Titillium3' !important
-  pre, code
+
+  code, pre
+    :color #000
+    :opacity 1
+
+  div.highlight
     :font-family 'Anonymous Pro' !important
-    :font-size 100% !important
+    :border 1px solid #000
+    :padding 5px 10px
+
+    code, pre
+      :color #fff
 
 #disqus_thread
   p, li, span, a, h1, h2, h3, pre, code
