--- a/stylesheets/screen.css
+++ b/stylesheets/screen.css
@@ -21,7 +21,7 @@ a img { border: none; }
 
 @font-face { font-family: 'Titillium5'; src: url(TitilliumMaps26L.otf) format('opentype'); }
 
-@font-face { font-family: 'Anonymous Pro'; src: url(Anonymous Pro.ttf) format('ttf'); }
+@font-face { font-family: 'Anonymous Pro'; src: url('AnonymousPro.ttf') format('truetype'); }
 
 h1 { font-family: "Titillium3", Georgia, "Times New Roman", Times, serif !important; color: #a69c91 !important; }
 h1 a { color: #a69c91 !important; text-decoration: none !important; }
@@ -98,7 +98,7 @@ body.bp .first { margin-left: 0; padding-left: 0; }
 body.bp .last { margin-right: 0; padding-right: 0; }
 body.bp .top { margin-top: 0; padding-top: 0; }
 body.bp .bottom { margin-bottom: 0; padding-bottom: 0; }
-body.bp .showgrid { background: url('/images/grid.png?1259179649'); }
+body.bp .showgrid { background: url('/images/grid.png?1255172044'); }
 body.bp .error { padding: .8em; margin-bottom: 1em; border: 2px solid #dddddd; background: #fbe3e4; color: #8a1f11; border-color: #fbc2c4; }
 body.bp .error a { color: #8a1f11; }
 body.bp .notice { padding: .8em; margin-bottom: 1em; border: 2px solid #dddddd; background: #fff6bf; color: #514721; border-color: #ffd324; }
@@ -106,7 +106,7 @@ body.bp .notice a { color: #514721; }
 body.bp .success { padding: .8em; margin-bottom: 1em; border: 2px solid #dddddd; background: #e6efc2; color: #264409; border-color: #c6d880; }
 body.bp .success a { color: #264409; }
 body.bp .hide { display: none; }
-body.bp .highlight { background: yellow; }
+body.bp .highlight { background: rgba(0, 0, 0, 0.5); }
 body.bp .added { background: #006600; color: white; }
 body.bp .removed { background: #990000; color: white; }
 
@@ -137,11 +137,13 @@ form.bp textarea { width: 390px; height: 250px; }
 #meta-date { margin: 0; padding-left: 5px; width: 110px; float: left; }
 
 #post-content { background-image: url(/images/band4.png); background-repeat: repeat-y; width: 730px; padding-left: 35px; padding-right: 30px; padding-top: 30px; padding-bottom: 30px; margin-bottom: -20px; }
-#post-content p, #post-content li, #post-content span, #post-content a, #post-content h1, #post-content h2, #post-content h3, #post-content pre, #post-content code { color: #210d11 !important; }
-#post-content p, #post-content li, #post-content span { font-family: 'Titillium2' !important; font-size: 120%; }
+#post-content p, #post-content li, #post-content a, #post-content h1, #post-content h2, #post-content h3 { color: #210d11 !important; }
+#post-content p, #post-content li { font-family: 'Titillium2' !important; font-size: 120%; }
 #post-content a { font-family: 'Titillium3' !important; text-decoration: none !important; }
 #post-content h1, #post-content h2, #post-content h3 { font-family: 'Titillium3' !important; }
-#post-content pre, #post-content code { font-family: 'Anonymous Pro' !important; font-size: 100% !important; }
+#post-content code, #post-content pre { color: #000; opacity: 1; }
+#post-content div.highlight { font-family: 'Anonymous Pro' !important; border: 1px solid #000; padding: 5px 10px; }
+#post-content div.highlight code, #post-content div.highlight pre { color: #fff; }
 
 #disqus_thread p, #disqus_thread li, #disqus_thread span, #disqus_thread a, #disqus_thread h1, #disqus_thread h2, #disqus_thread h3, #disqus_thread pre, #disqus_thread code { color: #451c23 !important; font-size: 100%; }
 
