--- a/stylesheets/screen.css
+++ b/stylesheets/screen.css
@@ -142,7 +142,7 @@ form.bp textarea { width: 390px; height: 250px; }
 #post-content a { font-family: 'Titillium3' !important; text-decoration: none !important; }
 #post-content h1, #post-content h2, #post-content h3 { font-family: 'Titillium3' !important; }
 #post-content code, #post-content pre { font-family: 'Anonymous Pro' !important; color: #000; opacity: 1; }
-#post-content div.highlight { border: 1px solid #000; padding: 5px 10px; }
+#post-content div.highlight { padding: 5px 10px; }
 #post-content div.highlight code, #post-content div.highlight pre { color: #fff; }
 
 #disqus_thread p, #disqus_thread li, #disqus_thread span, #disqus_thread a, #disqus_thread h1, #disqus_thread h2, #disqus_thread h3, #disqus_thread pre, #disqus_thread code { color: #451c23 !important; font-size: 100%; }
