--- a/_includes/header.html
+++ b/_includes/header.html
@@ -10,13 +10,13 @@
     </form>
     <h2>categories</h2>
     <p>
-      <a href="http://alexbcoles.com/code/">Code</a> |
-      <a href="http://alexbcoles.com/me/">Me</a>
+      <a href="/code/">Code</a> |
+      <a href="/me/">Me</a>
     </p>
     <!--    <h2>tags</h2> -->
   </div>
   <div id="home">
-    <h1><a href="http://alexbcoles.com/"><img src="/images/home.png"></a></h1>
+    <h1><a href="/"><img src="/images/home.png"></a></h1>
   </div>
   <div id="menu-right">
     <h2>about</h2>
