--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,6 +14,7 @@
       <link href="/stylesheets/ie.css" media="screen, projection" rel="stylesheet" type="text/css" />
   <![endif]-->
   <link rel="stylesheet" href="/stylesheets/jquery.tweet.css"   type="text/css" media="screen" charset="utf-8"/>
+  <link rel="Shortcut Icon" type="image/x-icon" href="/favicon.ico" />
 
   <script type='text/javascript'>
     var _gaq = _gaq || [];
