--- a/_sass/screen.sass
+++ b/_sass/screen.sass
@@ -131,6 +131,38 @@ form.bp
   :width 190px
   :float left
 
+#menu-down-left
+  :padding-top 0px
+  :padding-left 20px
+  :padding-right 20px
+  :margin 0
+  :width 190px
+  :float left
+  a, h3
+    :color #451c23 !important
+    :text-decoration none !important
+    &:hover
+      :color #a69c91 !important
+
+#menu-down-center
+  :margin 0
+  :width 330px
+  :float left
+
+#menu-down-right
+  :padding-top 0px
+  :padding-left 20px
+  :padding-right 20px
+  :margin 0
+  :width 190px
+  :float left
+  :text-align right
+  a, h3
+    :color #451c23 !important
+    :text-decoration none !important
+    &:hover
+      :color #a69c91 !important
+
 #search
   input
     :background-color #ad7f6b
