Contrast for posts
Signed-off-by: Guillermo Tirelli <me@guillermotirelli.com>

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -16,7 +16,7 @@ if (location.href.match(/localhost/)) {
   <div id="wrap-post">
     &nbsp;
   </div>
-  <div id="meta-post">
+  <div id="meta-post-wide">
     <div id="meta-title">
       <h1>{{ page.title }}</h1>
     </div>
@@ -26,7 +26,7 @@ if (location.href.match(/localhost/)) {
     <div id="clear-float">
     </div>
   </div>
-  <div id="post-content">
+  <div id="post-content-wide">
     {{ content }}
   </div>
   <div id="wrap-post">
