--- a/_sass/screen.sass
+++ b/_sass/screen.sass
@@ -46,6 +46,11 @@ form.bp
   :background-image url(/images/band3.png)
   :background-repeat repeat-y
 
+#meta-post-wide
+  :padding-top 5px
+  :background-image url(/images/band11.png)
+  :background-repeat repeat-y
+
 #meta-title
   :margin 0
   :margin-bottom -10px
@@ -89,6 +94,38 @@ form.bp
 
     code, pre
       :color #fff
+
+#post-content-wide
+  :background-image url(/images/band10.png)
+  :background-repeat repeat-y
+  :width 730px
+  :padding-left 35px
+  :padding-right 30px
+  :padding-top 30px
+  :padding-bottom 30px
+  :margin-bottom -20px
+  p, li, a, h1, h2, h3
+    :color #210d11 !important
+  p, li
+    :font-family 'Titillium2' !important
+    :font-size 120%
+  a
+    :font-family 'Titillium3' !important
+    :text-decoration none !important
+  h1, h2, h3
+    :font-family 'Titillium3' !important
+
+  code, pre
+    :font-family 'Anonymous Pro' !important
+    :color #000
+    :opacity 1
+
+  div.highlight
+    :padding 5px 10px
+
+    code, pre
+      :color #fff
+
 
 #disqus_thread
   p, li, span, a, h1, h2, h3, pre, code
