--- a/stylesheets/screen.css
+++ b/stylesheets/screen.css
@@ -132,6 +132,8 @@ form.bp textarea { width: 390px; height: 250px; }
 
 #meta-post { padding-top: 5px; background-image: url(/images/band3.png); background-repeat: repeat-y; }
 
+#meta-post-wide { padding-top: 5px; background-image: url(/images/band11.png); background-repeat: repeat-y; }
+
 #meta-title { margin: 0; margin-bottom: -10px; width: 655px; float: left; padding-left: 30px; }
 
 #meta-date { margin: 0; padding-left: 5px; width: 110px; float: left; }
@@ -144,6 +146,15 @@ form.bp textarea { width: 390px; height: 250px; }
 #post-content code, #post-content pre { font-family: 'Anonymous Pro' !important; color: #000; opacity: 1; }
 #post-content div.highlight { padding: 5px 10px; }
 #post-content div.highlight code, #post-content div.highlight pre { color: #fff; }
+
+#post-content-wide { background-image: url(/images/band10.png); background-repeat: repeat-y; width: 730px; padding-left: 35px; padding-right: 30px; padding-top: 30px; padding-bottom: 30px; margin-bottom: -20px; }
+#post-content-wide p, #post-content-wide li, #post-content-wide a, #post-content-wide h1, #post-content-wide h2, #post-content-wide h3 { color: #210d11 !important; }
+#post-content-wide p, #post-content-wide li { font-family: 'Titillium2' !important; font-size: 120%; }
+#post-content-wide a { font-family: 'Titillium3' !important; text-decoration: none !important; }
+#post-content-wide h1, #post-content-wide h2, #post-content-wide h3 { font-family: 'Titillium3' !important; }
+#post-content-wide code, #post-content-wide pre { font-family: 'Anonymous Pro' !important; color: #000; opacity: 1; }
+#post-content-wide div.highlight { padding: 5px 10px; }
+#post-content-wide div.highlight code, #post-content-wide div.highlight pre { color: #fff; }
 
 #disqus_thread p, #disqus_thread li, #disqus_thread span, #disqus_thread a, #disqus_thread h1, #disqus_thread h2, #disqus_thread h3, #disqus_thread pre, #disqus_thread code { color: #451c23 !important; font-size: 100%; }
 
