--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -4,13 +4,21 @@
   </div>
   <div id="footer-text">
   <p>
-    &copy; Copyright 2009, Alex B Coles. <br/>
-    This site was designed &amp; coded by <a href="http://ikonoklastik.com">Ikonoklastik</a>.<br/>
-    It uses <a href="http://github.com/mojombo/jekyll">Jekyll</a>, <a href="http://www.blueprintcss.org/">Blueprint</a> &amp; <a href="http://wiki.github.com/chriseppstein/compass">Compass</a>.
-    Fonts: <a href="http://www.campivisivi.net/titillium/">Titillium</a> by <a href="http://www.accademiadiurbino.it">Accademia di Belle Arti di Urbino</a> &amp; <a href="http://www.ms-studio.com/FontSales/anonymouspro.html">AnonymousPro</a> by <a href="http://www.ms-studio.com">Mark Gimonson Studio</a>.
-    It is hosted by <a href="http://github.com">GitHub</a>.<br/>
-    Blog comments powered by <a href="http://disqus.com">Disqus</a>.<br/>
+    © Copyright {{ site.time | date: "%Y" }}, Alex B Coles.<br/>
     This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/3.0/us/">Creative Commons Attribution-Noncommercial-Share Alike 3.0 United States License</a>.<br/>
+
+    Site designed and developed by <a href="http://ikonoklastik.com">Ikonoklastik</a>
+    using <a href="http://github.com/mojombo/jekyll">Jekyll</a>,
+    <a href="http://www.blueprintcss.org/">Blueprint</a> &amp;
+    <a href="http://wiki.github.com/chriseppstein/compass">Compass</a>.
+
+    Fonts are <a href="http://www.campivisivi.net/titillium/">Titillium</a> by
+    <a href="http://www.accademiadiurbino.it">Accademia di Belle Arti di Urbino</a>
+    &amp; <a href="http://www.ms-studio.com/FontSales/anonymouspro.html">AnonymousPro</a>
+    by <a href="http://www.ms-studio.com">Mark Gimonson Studio</a>.
+
+    Hosting by <a href="http://github.com">GitHub</a>.
+    Comments powered by <a href="http://disqus.com">Disqus</a>.<br/>
     <br/>
   </p>
   </div>
