Fix CSS to use classes not id
Signed-off-by: Alex Coles <alex@alexcolesportfolio.com>

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -25,6 +25,6 @@
   <div id="image-right">
     <a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/3.0/us/"><img alt="Creative Commons License" style="border-width:0" src="/images/cc70.png" /></a>
   </div>
-  <div id="clear-float">
+  <div class="clear-float">
   </div>
 </div>
