--- a/_includes/header.html
+++ b/_includes/header.html
@@ -66,6 +66,6 @@
       <a href="http://stackoverflow.com/users/3789/myabc">Stack Overflow</a>
     </p>
   </div>
-  <div id="clear-float">
+  <div class="clear-float">
   </div>
 </div>
