--- a/_includes/post_item.html
+++ b/_includes/post_item.html
@@ -1,24 +1,24 @@
-<div id="content">
-  <div id="wrap-post">
+<div class="content">
+  <div class="wrap-post">
     &nbsp;
   </div>
-  <div id="meta-post">
-    <div id="meta-title">
+  <div class="meta-post">
+    <div class="meta-title">
       <h1><a href="{{ post.id }}.html">{{ post.title }}</a></h1>
     </div>
-    <div id="meta-date">
+    <div class="meta-date">
       <p>{{ post.date | date: "%d %b, %Y" }}</p>
     </div>
-    <div id="clear-float">
+    <div class="clear-float">
     </div>
   </div>
-  <div id="post-content">
+  <div class="post-content">
     <p>{{ post.content | strip_html | truncatewords: 50 }}</p>
   </div>
-  <div id="wrap-post">
+  <div class="wrap-post">
     &nbsp;
   </div>
-  <div id="separator-post">
+  <div class="separator-post">
     &nbsp;
   </div>
 </div>
