--- a/_sass/partials/_fonts.sass
+++ b/_sass/partials/_fonts.sass
@@ -77,7 +77,7 @@ input
       :text-decoration underline !important
 
 
-#content
+.content
   p
     :font-family "Titillium3", Georgia, "Times New Roman", Times, serif !important
     :color #3f3735 !important
