--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -12,42 +12,42 @@ if (location.href.match(/localhost/)) {
 
 
 
-<div id="content">
-  <div id="wrap-post">
+<div class="content">
+  <div class="wrap-post">
     &nbsp;
   </div>
-  <div id="meta-post-wide">
-    <div id="meta-title">
+  <div class="meta-post-wide">
+    <div class="meta-title">
       <h1>{{ page.title }}</h1>
     </div>
-    <div id="meta-date">
+    <div class="meta-date">
       <p>{{ page.date | date: "%d %b, %Y" }}</p>
     </div>
-    <div id="clear-float">
+    <div class="clear-float">
     </div>
   </div>
-  <div id="post-content-wide">
+  <div class="post-content-wide">
     {{ content }}
   </div>
-  <div id="wrap-post">
+  <div class="wrap-post">
     &nbsp;
   </div>
-  <div id="separator-post">
+  <div class="separator-post">
     &nbsp;
   </div>
-  <div id="wrap-post">
+  <div class="wrap-post">
     &nbsp;
   </div>
-  <div id="post-content">
+  <div class="post-content">
     <div id="disqus_thread"></div>
     <script type="text/javascript" src="http://disqus.com/forums/myabc/embed.js"></script>
     <noscript><a href="http://myabc.disqus.com/?url=ref">View the discussion thread.</a></noscript>
     <!--    <a href="http://disqus.com" class="dsq-brlink">blog comments powered by <span class="logo-disqus">Disqus</span></a> -->
   </div>
-  <div id="wrap-post">
+  <div class="wrap-post">
     &nbsp;
   </div>
-  <div id="separator-post">
+  <div class="separator-post">
     &nbsp;
   </div>
 </div>
