--- a/_sass/screen.sass
+++ b/_sass/screen.sass
@@ -33,38 +33,38 @@ body.bp
 form.bp
   +blueprint-form
 
-#wrap-post
+.wrap-post
   :background-image url(/images/band2.png)
   :background-repeat repeat-y
 
-#separator-post
+.separator-post
   :background-image url(/images/band8.png)
   :background-repeat repeat-y
 
-#meta-post
+.meta-post
   :padding-top 5px
   :background-image url(/images/band3.png)
   :background-repeat repeat-y
 
-#meta-post-wide
+.meta-post-wide
   :padding-top 5px
   :background-image url(/images/band11.png)
   :background-repeat repeat-y
 
-#meta-title
+.meta-title
   :margin 0
   :margin-bottom -10px
   :width 655px
   :float left
   :padding-left 30px
 
-#meta-date
+.meta-date
   :margin 0
   :padding-left 5px
   :width 110px
   :float left
 
-#post-content
+.post-content
   :background-image url(/images/band4.png)
   :background-repeat repeat-y
   :width 730px
@@ -95,7 +95,7 @@ form.bp
     code, pre
       :color #fff
 
-#post-content-wide
+.post-content-wide
   :background-image url(/images/band10.png)
   :background-repeat repeat-y
   :width 730px
@@ -132,7 +132,7 @@ form.bp
     :color #451c23 !important
     :font-size 100%
 
-#clear-float
+.clear-float
   :clear both
 
 #menu
