--- a/stylesheets/screen.css
+++ b/stylesheets/screen.css
@@ -42,7 +42,7 @@ input { font-family: "Titillium2", Georgia, "Times New Roman", Times, serif !imp
 #footer a { font-family: "Titillium4", Georgia, "Times New Roman", Times, serif !important; color: #68454c !important; text-decoration: none !important; }
 #footer a:hover { text-decoration: underline !important; }
 
-#content p { font-family: "Titillium3", Georgia, "Times New Roman", Times, serif !important; color: #3f3735 !important; }
+.content p { font-family: "Titillium3", Georgia, "Times New Roman", Times, serif !important; color: #3f3735 !important; }
 
 body.bp { line-height: 1.5; font-family: Helvetica Neue, Arial, Helvetica, sans-serif; color: #333333; font-size: 75%; }
 body.bp h1 { font-weight: normal; color: #222222; font-size: 3em; line-height: 1; margin-bottom: 0.5em; }
@@ -98,7 +98,7 @@ body.bp .first { margin-left: 0; padding-left: 0; }
 body.bp .last { margin-right: 0; padding-right: 0; }
 body.bp .top { margin-top: 0; padding-top: 0; }
 body.bp .bottom { margin-bottom: 0; padding-bottom: 0; }
-body.bp .showgrid { background: url('/images/grid.png?1259179649'); }
+body.bp .showgrid { background: url('/images/grid.png?1255172044'); }
 body.bp .error { padding: .8em; margin-bottom: 1em; border: 2px solid #dddddd; background: #fbe3e4; color: #8a1f11; border-color: #fbc2c4; }
 body.bp .error a { color: #8a1f11; }
 body.bp .notice { padding: .8em; margin-bottom: 1em; border: 2px solid #dddddd; background: #fff6bf; color: #514721; border-color: #ffd324; }
@@ -126,39 +126,39 @@ form.bp input.text:focus, form.bp input.title:focus, form.bp textarea:focus, for
 form.bp input.text, form.bp input.title { width: 300px; }
 form.bp textarea { width: 390px; height: 250px; }
 
-#wrap-post { background-image: url(/images/band2.png); background-repeat: repeat-y; }
+.wrap-post { background-image: url(/images/band2.png); background-repeat: repeat-y; }
 
-#separator-post { background-image: url(/images/band8.png); background-repeat: repeat-y; }
+.separator-post { background-image: url(/images/band8.png); background-repeat: repeat-y; }
 
-#meta-post { padding-top: 5px; background-image: url(/images/band3.png); background-repeat: repeat-y; }
+.meta-post { padding-top: 5px; background-image: url(/images/band3.png); background-repeat: repeat-y; }
 
-#meta-post-wide { padding-top: 5px; background-image: url(/images/band11.png); background-repeat: repeat-y; }
+.meta-post-wide { padding-top: 5px; background-image: url(/images/band11.png); background-repeat: repeat-y; }
 
-#meta-title { margin: 0; margin-bottom: -10px; width: 655px; float: left; padding-left: 30px; }
+.meta-title { margin: 0; margin-bottom: -10px; width: 655px; float: left; padding-left: 30px; }
 
-#meta-date { margin: 0; padding-left: 5px; width: 110px; float: left; }
+.meta-date { margin: 0; padding-left: 5px; width: 110px; float: left; }
 
-#post-content { background-image: url(/images/band4.png); background-repeat: repeat-y; width: 730px; padding-left: 35px; padding-right: 30px; padding-top: 30px; padding-bottom: 30px; margin-bottom: -20px; }
-#post-content p, #post-content li, #post-content a, #post-content h1, #post-content h2, #post-content h3 { color: #210d11 !important; }
-#post-content p, #post-content li { font-family: 'Titillium2' !important; font-size: 120%; }
-#post-content a { font-family: 'Titillium3' !important; text-decoration: none !important; }
-#post-content h1, #post-content h2, #post-content h3 { font-family: 'Titillium3' !important; }
-#post-content code, #post-content pre { font-family: 'Anonymous Pro' !important; color: #000; opacity: 1; }
-#post-content div.highlight { padding: 5px 10px; }
-#post-content div.highlight code, #post-content div.highlight pre { color: #fff; }
+.post-content { background-image: url(/images/band4.png); background-repeat: repeat-y; width: 730px; padding-left: 35px; padding-right: 30px; padding-top: 30px; padding-bottom: 30px; margin-bottom: -20px; }
+.post-content p, .post-content li, .post-content a, .post-content h1, .post-content h2, .post-content h3 { color: #210d11 !important; }
+.post-content p, .post-content li { font-family: 'Titillium2' !important; font-size: 120%; }
+.post-content a { font-family: 'Titillium3' !important; text-decoration: none !important; }
+.post-content h1, .post-content h2, .post-content h3 { font-family: 'Titillium3' !important; }
+.post-content code, .post-content pre { font-family: 'Anonymous Pro' !important; color: #000; opacity: 1; }
+.post-content div.highlight { padding: 5px 10px; }
+.post-content div.highlight code, .post-content div.highlight pre { color: #fff; }
 
-#post-content-wide { background-image: url(/images/band10.png); background-repeat: repeat-y; width: 730px; padding-left: 35px; padding-right: 30px; padding-top: 30px; padding-bottom: 30px; margin-bottom: -20px; }
-#post-content-wide p, #post-content-wide li, #post-content-wide a, #post-content-wide h1, #post-content-wide h2, #post-content-wide h3 { color: #210d11 !important; }
-#post-content-wide p, #post-content-wide li { font-family: 'Titillium2' !important; font-size: 120%; }
-#post-content-wide a { font-family: 'Titillium3' !important; text-decoration: none !important; }
-#post-content-wide h1, #post-content-wide h2, #post-content-wide h3 { font-family: 'Titillium3' !important; }
-#post-content-wide code, #post-content-wide pre { font-family: 'Anonymous Pro' !important; color: #000; opacity: 1; }
-#post-content-wide div.highlight { padding: 5px 10px; }
-#post-content-wide div.highlight code, #post-content-wide div.highlight pre { color: #fff; }
+.post-content-wide { background-image: url(/images/band10.png); background-repeat: repeat-y; width: 730px; padding-left: 35px; padding-right: 30px; padding-top: 30px; padding-bottom: 30px; margin-bottom: -20px; }
+.post-content-wide p, .post-content-wide li, .post-content-wide a, .post-content-wide h1, .post-content-wide h2, .post-content-wide h3 { color: #210d11 !important; }
+.post-content-wide p, .post-content-wide li { font-family: 'Titillium2' !important; font-size: 120%; }
+.post-content-wide a { font-family: 'Titillium3' !important; text-decoration: none !important; }
+.post-content-wide h1, .post-content-wide h2, .post-content-wide h3 { font-family: 'Titillium3' !important; }
+.post-content-wide code, .post-content-wide pre { font-family: 'Anonymous Pro' !important; color: #000; opacity: 1; }
+.post-content-wide div.highlight { padding: 5px 10px; }
+.post-content-wide div.highlight code, .post-content-wide div.highlight pre { color: #fff; }
 
 #disqus_thread p, #disqus_thread li, #disqus_thread span, #disqus_thread a, #disqus_thread h1, #disqus_thread h2, #disqus_thread h3, #disqus_thread pre, #disqus_thread code { color: #451c23 !important; font-size: 100%; }
 
-#clear-float { clear: both; }
+.clear-float { clear: both; }
 
 #menu { background-image: url(/images/band1.png); background-repeat: repeat-y; }
 
