Initial conversion to HTML 5
Signed-off-by: Alex Coles <alex@alexcolesportfolio.com>

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,4 +1,4 @@
-<div id="footer">
+<footer id="footer">
   <div id="image-left">
     <a href="http://ikonoklastik.com"><img alt="Iconoclastic" style="border-width:0" src="/images/ik70.png" /></a>
   </div>
@@ -27,4 +27,4 @@
   </div>
   <div class="clear-float">
   </div>
-</div>
+</footer>
