--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,5 +1,5 @@
 <div id="header">
-  <div id="menu-left">
+  <nav id="menu-left">
     <h2>search</h2>
     <form action="http://www.google.com/cse" id="cse-search-box">
       <div id="search">
@@ -14,11 +14,11 @@
       <a href="/me/">Me</a>
     </p>
     <!--    <h2>tags</h2> -->
-  </div>
+  </nav>
   <div id="home">
     <h1><a href="/"><img src="/images/home.png"></a></h1>
   </div>
-  <div id="menu-right">
+  <nav id="menu-right">
     <h2>about</h2>
     <p><strong>Alex B Coles</strong> is a freelance web developer.</p>
     <h2>links</h2>
@@ -65,7 +65,7 @@
       <a href="http://www.ohloh.net/accounts/myabc">Ohloh</a> |
       <a href="http://stackoverflow.com/users/3789/myabc">Stack Overflow</a>
     </p>
-  </div>
+  </nav>
   <div class="clear-float">
   </div>
 </div>
