--- a/_sass/screen.sass
+++ b/_sass/screen.sass
@@ -11,6 +11,7 @@
 // To generate css equivalent to the blueprint css but with your configuration applied, uncomment:
 // +blueprint
 
+@import partials/html5_reset.sass
 @import partials/fonts.sass
 
 //Recommended Blueprint configuration with scoping and semantic layout:
