--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,19 +1,20 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml">
-
+<!DOCTYPE html><html lang="en">
 <head>
-  <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
+  <meta charset="utf-8"/>
   <meta http-equiv="X-UA-Compatible" content="chrome=1"/>
   <title>myabc | {{ page.title }}</title>
   <meta name="generator" content="Jekyll" />
 
-  <link rel="stylesheet" href="/stylesheets/screen.css"  type="text/css" media="screen, projection" charset="utf-8"/>
-  <link rel="stylesheet" href="/stylesheets/code.css"    type="text/css" media="screen" charset="utf-8"/>
-  <link rel="stylesheet" href="/stylesheets/print.css"   type="text/css" media="print" charset="utf-8"/>
-  <!--[if lt IE 8]>
-      <link href="/stylesheets/ie.css" media="screen, projection" rel="stylesheet" type="text/css" />
+  <!--[if IE]>
+  <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
   <![endif]-->
-  <link rel="stylesheet" href="/stylesheets/jquery.tweet.css"   type="text/css" media="screen" charset="utf-8"/>
+  <link rel="stylesheet" href="/stylesheets/screen.css"  type="text/css" media="screen, projection" />
+  <link rel="stylesheet" href="/stylesheets/code.css"    type="text/css" media="screen" />
+  <link rel="stylesheet" href="/stylesheets/print.css"   type="text/css" media="print" />
+  <!--[if lt IE 8]>
+  <link href="/stylesheets/ie.css" media="screen, projection" rel="stylesheet" type="text/css" />
+  <![endif]-->
+  <link rel="stylesheet" href="/stylesheets/jquery.tweet.css"   type="text/css" media="screen" />
   <link rel="Shortcut Icon" type="image/x-icon" href="/favicon.ico" />
 
   <script type='text/javascript'>
