--- a/_includes/header.html
+++ b/_includes/header.html
@@ -20,7 +20,7 @@
   </div>
   <nav id="menu-right">
     <h2>about</h2>
-    <p><strong>Alex B Coles</strong> is a freelance web developer.</p>
+    <p><strong>Alex B Coles</strong> is a web developer.</p>
     <h2>links</h2>
     <p>
       <a href="http://twitter.com/myabc">Twitter</a> |
