--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,14 +1,13 @@
 <footer id="footer">
   <div id="image-left">
-    <a href="http://ikonoklastik.com"><img alt="Iconoclastic" style="border-width:0" src="/images/ik70.png" /></a>
   </div>
   <div id="footer-text">
   <p>
     © Copyright {{ site.time | date: "%Y" }}, Alex B Coles.<br/>
     This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/3.0/us/">Creative Commons Attribution-Noncommercial-Share Alike 3.0 United States License</a>.<br/>
 
-    Site designed and developed by <a href="http://ikonoklastik.com">Ikonoklastik</a>
-    using <a href="http://github.com/mojombo/jekyll">Jekyll</a>,
+    Site designed and developed using
+    <a href="http://github.com/mojombo/jekyll">Jekyll</a>,
     <a href="http://www.blueprintcss.org/">Blueprint</a> &amp;
     <a href="http://wiki.github.com/chriseppstein/compass">Compass</a>.
 
