Upgrade Sass syntax to Sass 3, Cleanup Compass config
Signed-off-by: Alex Coles <alex@alexbcoles.com>

--- a/_sass/partials/_base.sass
+++ b/_sass/partials/_base.sass
@@ -19,4 +19,4 @@
 //!link_visited_color = !link_color - #333
 
 // css class conflicts with Jekyll / Pygments
-!highlight_color = rgba(0,0,0,0.5)
+$highlight_color: rgba(0, 0, 0, 0.5)
