--- a/_sass/partials/_fonts.sass
+++ b/_sass/partials/_fonts.sass
@@ -1,83 +1,80 @@
 @font-face
-  :font-family 'Titillium1'
-  :src url(TitilliumMaps26L004.otf) format('opentype')
+  font-family: "Titillium1"
+  src: url(TitilliumMaps26L004.otf) format("opentype")
+
 
 @font-face
-  :font-family 'Titillium2'
-  :src url(TitilliumMaps26L003.otf) format('opentype')
+  font-family: "Titillium2"
+  src: url(TitilliumMaps26L003.otf) format("opentype")
+
 
 @font-face
-  :font-family 'Titillium3'
-  :src url(TitilliumMaps26L002.otf) format('opentype')
+  font-family: "Titillium3"
+  src: url(TitilliumMaps26L002.otf) format("opentype")
+
 
 @font-face
-  :font-family 'Titillium4'
-  :src url(TitilliumMaps26L001.otf) format('opentype')
+  font-family: "Titillium4"
+  src: url(TitilliumMaps26L001.otf) format("opentype")
+
 
 @font-face
-  :font-family 'Titillium5'
-  :src url(TitilliumMaps26L.otf) format('opentype')
+  font-family: "Titillium5"
+  src: url(TitilliumMaps26L.otf) format("opentype")
+
 
 @font-face
-  :font-family 'Anonymous Pro'
-  :src url('Anonymous Pro.ttf') format('truetype')
+  font-family: "Anonymous Pro"
+  src: url("Anonymous Pro.ttf") format("truetype")
 
 
 h1
-  :font-family "Titillium3", Georgia, "Times New Roman", Times, serif !important
-  :color #a69c91 !important
-
+  font-family: "Titillium3", Georgia, "Times New Roman", Times, serif !important
+  color: #a69c91 !important
   a
-    :color #a69c91 !important
-    :text-decoration none !important
-
+    color: #a69c91 !important
+    text-decoration: none !important
     &:hover
-      :text-decoration underline !important
+      text-decoration: underline !important
 
 h2
-  :font-family "Titillium3", Georgia, "Times New Roman", Times, serif !important
-  :color #68454c !important
-  :margin-top 0.5em !important
-  :margin-bottom 0.1em !important
+  font-family: "Titillium3", Georgia, "Times New Roman", Times, serif !important
+  color: #68454c !important
+  margin-top: 0.5em !important
+  margin-bottom: 0.1em !important
 
 h3
-  :font-family "Titillium2", Georgia, "Times New Roman", Times, serif !important
-
+  font-family: "Titillium2", Georgia, "Times New Roman", Times, serif !important
   &#comments
-    :font-size 1.6em
+    font-size: 1.6em
 
 input
-  :font-family "Titillium2", Georgia, "Times New Roman", Times, serif !important
+  font-family: "Titillium2", Georgia, "Times New Roman", Times, serif !important
 
 #header
   p
-    :font-family "Titillium3", Georgia, "Times New Roman", Times, serif !important
-    :color #ad7f6b !important
-    :margin 0 !important
-
+    font-family: "Titillium3", Georgia, "Times New Roman", Times, serif !important
+    color: #ad7f6b !important
+    margin: 0 !important
   a
-    :color #ad7f6b !important
-    :text-decoration none !important
-
+    color: #ad7f6b !important
+    text-decoration: none !important
     &:hover
-      :text-decoration underline !important
+      text-decoration: underline !important
 
 #footer
   p
-    :font-family "Titillium2", Georgia, "Times New Roman", Times, serif !important
-    :color #68454c !important
-    :margin 0 !important
-
+    font-family: "Titillium2", Georgia, "Times New Roman", Times, serif !important
+    color: #68454c !important
+    margin: 0 !important
   a
-    :font-family "Titillium4", Georgia, "Times New Roman", Times, serif !important
-    :color #68454c !important
-    :text-decoration none !important
-
+    font-family: "Titillium4", Georgia, "Times New Roman", Times, serif !important
+    color: #68454c !important
+    text-decoration: none !important
     &:hover
-      :text-decoration underline !important
-
+      text-decoration: underline !important
 
 .content
   p
-    :font-family "Titillium3", Georgia, "Times New Roman", Times, serif !important
-    :color #3f3735 !important
+    font-family: "Titillium3", Georgia, "Times New Roman", Times, serif !important
+    color: #3f3735 !important
