--- a/_sass/screen.sass
+++ b/_sass/screen.sass
@@ -1,9 +1,12 @@
 // This import applies a global reset to any page that imports this stylesheet.
-@import blueprint/reset.sass
+@import blueprint/reset
+
 // To configure blueprint, edit the partials/base.sass file.
-@import partials/base.sass
+@import partials/base
+
 // Import all the default blueprint modules so that we can access their mixins.
 @import blueprint
+
 // Import the non-default scaffolding module.
 // @import blueprint/modules/scaffolding.sass
 // @import blueprint/modules/colors.sass
@@ -15,7 +18,8 @@
 @import partials/fonts.sass
 
 //Recommended Blueprint configuration with scoping and semantic layout:
-+blueprint-typography("body.bp")
++blueprint-typography
+
 //+blueprint-scaffolding("body.bp")
 body.bp
   +blueprint-utilities
@@ -23,204 +27,197 @@ body.bp
   +blueprint-interaction
   // Remove the scaffolding when you're ready to start doing visual design.
   // Or leave it in if you're happy with how blueprint looks out-of-the-box
-  :background #343434
-  :text-align center
-  :margin 0 auto
-  :width 800px
+  background: #343434
+  text-align: center
+  margin: 0 auto
+  width: 800px
 
 #container
-  :text-align left
+  text-align: left
 
 form.bp
   +blueprint-form
 
 .wrap-post
-  :background-image url(/images/band2.png)
-  :background-repeat repeat-y
+  background-image: url(/images/band2.png)
+  background-repeat: repeat-y
 
 .separator-post
-  :background-image url(/images/band8.png)
-  :background-repeat repeat-y
+  background-image: url(/images/band8.png)
+  background-repeat: repeat-y
 
 .meta-post
-  :padding-top 5px
-  :background-image url(/images/band3.png)
-  :background-repeat repeat-y
+  padding-top: 5px
+  background-image: url(/images/band3.png)
+  background-repeat: repeat-y
 
 .meta-post-wide
-  :padding-top 5px
-  :background-image url(/images/band11.png)
-  :background-repeat repeat-y
+  padding-top: 5px
+  background-image: url(/images/band11.png)
+  background-repeat: repeat-y
 
 .meta-title
-  :margin 0
-  :margin-bottom -10px
-  :width 655px
-  :float left
-  :padding-left 30px
+  margin: 0
+  margin-bottom: -10px
+  width: 655px
+  float: left
+  padding-left: 30px
 
 .meta-date
-  :margin 0
-  :padding-left 5px
-  :width 110px
-  :float left
+  margin: 0
+  padding-left: 5px
+  width: 110px
+  float: left
 
 .post-content
-  :background-image url(/images/band4.png)
-  :background-repeat repeat-y
-  :width 730px
-  :padding-left 35px
-  :padding-right 30px
-  :padding-top 30px
-  :padding-bottom 30px
-  :margin-bottom -20px
+  background-image: url(/images/band4.png)
+  background-repeat: repeat-y
+  width: 730px
+  padding-left: 35px
+  padding-right: 30px
+  padding-top: 30px
+  padding-bottom: 30px
+  margin-bottom: -20px
   p, li, a, h1, h2, h3
-    :color #210d11 !important
+    color: #210d11 !important
   p, li
-    :font-family 'Titillium2' !important
-    :font-size 120%
+    font-family: "Titillium2" !important
+    font-size: 120%
   a
-    :font-family 'Titillium3' !important
-    :text-decoration none !important
+    font-family: "Titillium3" !important
+    text-decoration: none !important
   h1, h2, h3
-    :font-family 'Titillium3' !important
-
+    font-family: "Titillium3" !important
   code, pre
-    :font-family 'Anonymous Pro' !important
-    :color #000
-    :opacity 1
-
+    font-family: "Anonymous Pro" !important
+    color: black
+    opacity: 1
   div.highlight
-    :padding 5px 10px
-
+    padding: 5px 10px
     code, pre
-      :color #fff
+      color: white
 
 .post-content-wide
-  :background-image url(/images/band10.png)
-  :background-repeat repeat-y
-  :width 730px
-  :padding-left 35px
-  :padding-right 30px
-  :padding-top 30px
-  :padding-bottom 30px
-  :margin-bottom -20px
+  background-image: url(/images/band10.png)
+  background-repeat: repeat-y
+  width: 730px
+  padding-left: 35px
+  padding-right: 30px
+  padding-top: 30px
+  padding-bottom: 30px
+  margin-bottom: -20px
   p, li, a, h1, h2, h3
-    :color #210d11 !important
+    color: #210d11 !important
   p, li
-    :font-family 'Titillium2' !important
-    :font-size 120%
+    font-family: "Titillium2" !important
+    font-size: 120%
   a
-    :font-family 'Titillium3' !important
-    :text-decoration none !important
+    font-family: "Titillium3" !important
+    text-decoration: none !important
   h1, h2, h3
-    :font-family 'Titillium3' !important
-
+    font-family: "Titillium3" !important
   code, pre
-    :font-family 'Anonymous Pro' !important
-    :color #000
-    :opacity 1
-
+    font-family: "Anonymous Pro" !important
+    color: black
+    opacity: 1
   div.highlight
-    :padding 5px 10px
-
+    padding: 5px 10px
     code, pre
-      :color #fff
-
+      color: white
 
 #disqus_thread
   p, li, span, a, h1, h2, h3, pre, code
-    :color #451c23 !important
-    :font-size 100%
+    color: #451c23 !important
+    font-size: 100%
 
 .clear-float
-  :clear both
+  clear: both
 
 #menu
-  :background-image url(/images/band1.png)
-  :background-repeat repeat-y
+  background-image: url(/images/band1.png)
+  background-repeat: repeat-y
 
 #header
-  :background-image url(/images/band8.png)
-  :background-repeat repeat-y
+  background-image: url(/images/band8.png)
+  background-repeat: repeat-y
 
 #footer
-  :background-image url(/images/band9.png)
-  :background-repeat repeat-y
+  background-image: url(/images/band9.png)
+  background-repeat: repeat-y
 
 #menu-left
-  :padding-top 170px
-  :padding-left 20px
-  :padding-right 20px
-  :margin 0
-  :width 190px
-  :float left
+  padding-top: 170px
+  padding-left: 20px
+  padding-right: 20px
+  margin: 0
+  width: 190px
+  float: left
 
 #home
-  :margin 0
-  :width 330px
-  :float left
+  margin: 0
+  width: 330px
+  float: left
 
 #menu-right
-  :padding-top 170px
-  :padding-left 20px
-  :padding-right 20px
-  :margin 0
-  :width 190px
-  :float left
+  padding-top: 170px
+  padding-left: 20px
+  padding-right: 20px
+  margin: 0
+  width: 190px
+  float: left
 
 #menu-down-left
-  :padding-top 0px
-  :padding-left 20px
-  :padding-right 20px
-  :margin 0
-  :width 190px
-  :float left
+  padding-top: 0px
+  padding-left: 20px
+  padding-right: 20px
+  margin: 0
+  width: 190px
+  float: left
   a, h3
-    :color #451c23 !important
-    :text-decoration none !important
+    color: #451c23 !important
+    text-decoration: none !important
     &:hover
-      :color #a69c91 !important
+      color: #a69c91 !important
 
 #menu-down-center
-  :margin 0
-  :width 330px
-  :float left
+  margin: 0
+  width: 330px
+  float: left
 
 #menu-down-right
-  :padding-top 0px
-  :padding-left 20px
-  :padding-right 20px
-  :margin 0
-  :width 190px
-  :float left
-  :text-align right
+  padding-top: 0px
+  padding-left: 20px
+  padding-right: 20px
+  margin: 0
+  width: 190px
+  float: left
+  text-align: right
   a, h3
-    :color #451c23 !important
-    :text-decoration none !important
+    color: #451c23 !important
+    text-decoration: none !important
     &:hover
-      :color #a69c91 !important
+      color: #a69c91 !important
 
 #search
   input
-    :background-color #ad7f6b
-    :border none
+    background-color: #ad7f6b
+    border: none
 
 #image-left
-  :margin 0
-  :width 100px
-  :float left
-  :padding-left 20px
-  :padding-top 20px
+  margin: 0
+  width: 100px
+  float: left
+  padding-left: 20px
+  padding-top: 20px
 
 #footer-text
-  :margin 0
-  :width 580px
-  :float left
-  :padding-top 20px
+  margin: 0
+  width: 580px
+  float: left
+  padding-top: 20px
 
 #image-right
-  :margin 0
-  :width 100px
-  :float left
-  :padding-top 20px
+  margin: 0
+  width: 100px
+  float: left
+  padding-top: 20px
