--- a/stylesheets/screen.css
+++ b/stylesheets/screen.css
@@ -127,7 +127,7 @@ caption { background: #eeeeee; }
 
 .loud { color: #111111; }
 
-body.bp { background: #343434; text-align: center; margin: 0 auto; width: 800px; }
+body.bp { background: white; text-align: center; margin: 0 auto; width: 800px; }
 body.bp .clear { clear: both; }
 body.bp .nowrap { white-space: nowrap; }
 body.bp .clearfix { overflow: hidden; *zoom: 1; }
@@ -168,19 +168,19 @@ form.bp select { background-color: #fff; border-width: 1px; border-style: solid;
 form.bp input.text, form.bp input.title, form.bp input[type=email], form.bp input[type=text], form.bp input[type=password] { width: 300px; }
 form.bp textarea { width: 390px; height: 250px; }
 
-.wrap-post { background-image: url(/images/band2.png); background-repeat: repeat-y; }
+.wrap-post { background-repeat: repeat-y; }
 
-.separator-post { background-image: url(/images/band8.png); background-repeat: repeat-y; }
+.separator-post { background-repeat: repeat-y; }
 
-.meta-post { padding-top: 5px; background-image: url(/images/band3.png); background-repeat: repeat-y; }
+.meta-post { padding-top: 5px; background-repeat: repeat-y; }
 
-.meta-post-wide { padding-top: 5px; background-image: url(/images/band11.png); background-repeat: repeat-y; }
+.meta-post-wide { padding-top: 5px; background-repeat: repeat-y; }
 
 .meta-title { margin: 0; margin-bottom: -10px; width: 655px; float: left; padding-left: 30px; }
 
 .meta-date { margin: 0; padding-left: 5px; width: 110px; float: left; }
 
-.post-content { background-image: url(/images/band4.png); background-repeat: repeat-y; width: 730px; padding-left: 35px; padding-right: 30px; padding-top: 30px; padding-bottom: 30px; margin-bottom: -20px; }
+.post-content { width: 730px; padding-left: 35px; padding-right: 30px; padding-top: 30px; padding-bottom: 30px; margin-bottom: -20px; }
 .post-content p, .post-content li, .post-content a, .post-content h1, .post-content h2, .post-content h3 { color: #210d11 !important; }
 .post-content p, .post-content li { font-family: "Titillium2" !important; font-size: 120%; }
 .post-content a { font-family: "Titillium3" !important; text-decoration: none !important; }
@@ -189,7 +189,7 @@ form.bp textarea { width: 390px; height: 250px; }
 .post-content div.highlight { padding: 5px 10px; }
 .post-content div.highlight code, .post-content div.highlight pre { color: white; }
 
-.post-content-wide { background-image: url(/images/band10.png); background-repeat: repeat-y; width: 730px; padding-left: 35px; padding-right: 30px; padding-top: 30px; padding-bottom: 30px; margin-bottom: -20px; }
+.post-content-wide { width: 730px; padding-left: 35px; padding-right: 30px; padding-top: 30px; padding-bottom: 30px; margin-bottom: -20px; }
 .post-content-wide p, .post-content-wide li, .post-content-wide a, .post-content-wide h1, .post-content-wide h2, .post-content-wide h3 { color: #210d11 !important; }
 .post-content-wide p, .post-content-wide li { font-family: "Titillium2" !important; font-size: 120%; }
 .post-content-wide a { font-family: "Titillium3" !important; text-decoration: none !important; }
@@ -201,12 +201,6 @@ form.bp textarea { width: 390px; height: 250px; }
 #disqus_thread p, #disqus_thread li, #disqus_thread span, #disqus_thread a, #disqus_thread h1, #disqus_thread h2, #disqus_thread h3, #disqus_thread pre, #disqus_thread code { color: #451c23 !important; font-size: 100%; }
 
 .clear-float { clear: both; }
-
-#menu { background-image: url(/images/band1.png); background-repeat: repeat-y; }
-
-#header { background-image: url(/images/band8.png); background-repeat: repeat-y; }
-
-#footer { background-image: url(/images/band9.png); background-repeat: repeat-y; }
 
 #menu-left { padding-top: 170px; padding-left: 20px; padding-right: 20px; margin: 0; width: 190px; float: left; }
 
@@ -224,7 +218,7 @@ form.bp textarea { width: 390px; height: 250px; }
 #menu-down-right a, #menu-down-right h3 { color: #451c23 !important; text-decoration: none !important; }
 #menu-down-right a:hover, #menu-down-right h3:hover { color: #a69c91 !important; }
 
-#search input { background-color: #ad7f6b; border: none; }
+#search input { background-color: white; border: 1px solid #451c23; }
 
 #image-left { margin: 0; width: 100px; float: left; padding-left: 20px; padding-top: 20px; }
 
