--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html><html lang="en">
 <head>
   <meta charset="utf-8"/>
-  <meta http-equiv="X-UA-Compatible" content="chrome=1"/>
+  <meta http-equiv="X-UA-Compatible" content="IE=Edge,chrome=1">
   <title>myabc | {{ page.title }}</title>
   <meta name="generator" content="Jekyll" />
 
