Switch to DIN, Cleanup various colours
* Begin removing !important, where possible.
* Employ Blueprint variables, where possible.

Signed-off-by: Alex Coles <alex@alexbcoles.com>

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -11,9 +11,7 @@
     <a href="http://www.blueprintcss.org/">Blueprint</a> &amp;
     <a href="http://wiki.github.com/chriseppstein/compass">Compass</a>.
 
-    Fonts are <a href="http://www.campivisivi.net/titillium/">Titillium</a> by
-    <a href="http://www.accademiadiurbino.it">Accademia di Belle Arti di Urbino</a>
-    &amp; <a href="http://www.ms-studio.com/FontSales/anonymouspro.html">AnonymousPro</a>
+    Fonts include <a href="http://www.ms-studio.com/FontSales/anonymouspro.html">AnonymousPro</a>
     by <a href="http://www.ms-studio.com">Mark Gimonson Studio</a>.
 
     Hosting by <a href="http://github.com">GitHub</a>.
