--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,6 +5,7 @@
   <title>myabc | {{ page.title }}</title>
   <meta name="generator" content="Jekyll" />
 
+  <link href="http://fast.fonts.com/cssapi/ae5dd709-a741-4e0d-b746-cc09f435bffb.css" rel="stylesheet" type="text/css" />
   <!--[if IE]>
   <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
   <![endif]-->
