--- a/_sass/screen.sass
+++ b/_sass/screen.sass
@@ -9,7 +9,7 @@
 
 body.bp
   +blueprint-utilities
-  +blueprint-debug
+  //+blueprint-debug
   +blueprint-interaction
 
   background: #fff
@@ -55,18 +55,14 @@ form.bp
   padding-top: 30px
   padding-bottom: 30px
   margin-bottom: -20px
+
   p, li, a, h1, h2, h3
     color: #210d11 !important
   p, li
-    font-family: "Titillium2" !important
     font-size: 120%
   a
-    font-family: "Titillium3" !important
     text-decoration: none !important
-  h1, h2, h3
-    font-family: "Titillium3" !important
   code, pre
-    font-family: "Anonymous Pro" !important
     color: black
     opacity: 1
   div.highlight
@@ -84,15 +80,10 @@ form.bp
   p, li, a, h1, h2, h3
     color: #210d11 !important
   p, li
-    font-family: "Titillium2" !important
     font-size: 120%
   a
-    font-family: "Titillium3" !important
     text-decoration: none !important
-  h1, h2, h3
-    font-family: "Titillium3" !important
   code, pre
-    font-family: "Anonymous Pro" !important
     color: black
     opacity: 1
   div.highlight
