--- a/_sass/partials/_fonts.sass
+++ b/_sass/partials/_fonts.sass
@@ -1,80 +1,44 @@
-@font-face
-  font-family: "Titillium1"
-  src: url(TitilliumMaps26L004.otf) format("opentype")
-
-
-@font-face
-  font-family: "Titillium2"
-  src: url(TitilliumMaps26L003.otf) format("opentype")
-
-
-@font-face
-  font-family: "Titillium3"
-  src: url(TitilliumMaps26L002.otf) format("opentype")
-
-
-@font-face
-  font-family: "Titillium4"
-  src: url(TitilliumMaps26L001.otf) format("opentype")
-
-
-@font-face
-  font-family: "Titillium5"
-  src: url(TitilliumMaps26L.otf) format("opentype")
-
-
-@font-face
-  font-family: "Anonymous Pro"
-  src: url("Anonymous Pro.ttf") format("truetype")
-
-
 h1
-  font-family: "Titillium3", Georgia, "Times New Roman", Times, serif !important
-  color: #a69c91 !important
+  font-family: $din-bold
+  font-weight: bold
+  text-transform: lowercase
+
+  color: #a69c91
   a
-    color: #a69c91 !important
-    text-decoration: none !important
+    color: #a69c91
+    text-decoration: none
     &:hover
-      text-decoration: underline !important
+      text-decoration: underline
 
 h2
-  font-family: "Titillium3", Georgia, "Times New Roman", Times, serif !important
-  color: #68454c !important
-  margin-top: 0.5em !important
-  margin-bottom: 0.1em !important
+  color: #68454c
+  margin-top: 0.5em
+  margin-bottom: 0.1em
 
 h3
-  font-family: "Titillium2", Georgia, "Times New Roman", Times, serif !important
   &#comments
     font-size: 1.6em
 
-input
-  font-family: "Titillium2", Georgia, "Times New Roman", Times, serif !important
-
 #header
   p
-    font-family: "Titillium3", Georgia, "Times New Roman", Times, serif !important
-    color: #ad7f6b !important
-    margin: 0 !important
+    color: #ad7f6b
+    margin: 0
   a
-    color: #ad7f6b !important
-    text-decoration: none !important
+    color: #ad7f6b
+    text-decoration: none
     &:hover
-      text-decoration: underline !important
+      text-decoration: underline
 
 #footer
   p
-    font-family: "Titillium2", Georgia, "Times New Roman", Times, serif !important
-    color: #68454c !important
-    margin: 0 !important
+    color: #68454c
+    margin: 0
   a
-    font-family: "Titillium4", Georgia, "Times New Roman", Times, serif !important
-    color: #68454c !important
-    text-decoration: none !important
+    color: #68454c
+    text-decoration: none
     &:hover
-      text-decoration: underline !important
+      text-decoration: underline
 
 .content
   p
-    font-family: "Titillium3", Georgia, "Times New Roman", Times, serif !important
-    color: #3f3735 !important
+    color: #3f3735
