Remove padding from posts
Signed-off-by: Alex Coles <alex@alexbcoles.com>

--- a/_sass/partials/_base.sass
+++ b/_sass/partials/_base.sass
@@ -13,5 +13,6 @@ $din-regular: 'DIN Next W01 Regular'
 $din-bold:    'DIN Next W01 Bold'
 $din-italic:  'DIN Next W01 Italic'
 
-$blueprint-font-family: 'DIN Next W01 Regular', 'Verdana', sans-serif
+$blueprint-font-family:       'DIN Next W01 Regular', 'Verdana', sans-serif
 $blueprint-fixed-font-family: 'andale mono', 'lucida console', monospace
+$blueprint-font-size:         14px
