--- a/_sass/screen.sass
+++ b/_sass/screen.sass
@@ -23,11 +23,11 @@ body.bp
 form.bp
   +blueprint-form
 
-.wrap-post
-  background-repeat: repeat-y
-
-.separator-post
-  background-repeat: repeat-y
+//.wrap-post
+//  background-repeat: repeat-y
+//
+//.separator-post
+//  background-repeat: repeat-y
 
 .meta-post
   padding-top: 5px
@@ -40,7 +40,7 @@ form.bp
   margin-bottom: -10px
   width: 655px
   float: left
-  padding-left: 30px
+  //padding-left: 30px
 
 .meta-date
   margin: 0
@@ -48,41 +48,10 @@ form.bp
   width: 110px
   float: left
 
-.post-content
-  width: 730px
-  padding-left: 35px
-  padding-right: 30px
-  padding-top: 30px
-  padding-bottom: 30px
-  margin-bottom: -20px
-
-  p, li, a, h1, h2, h3
-    color: #210d11 !important
-  p, li
-    font-size: 120%
-  a
-    text-decoration: none !important
-  code, pre
-    color: black
-    opacity: 1
-  div.highlight
-    padding: 5px 10px
-    code, pre
-      color: white
-
+.post-content,
 .post-content-wide
-  width: 730px
-  padding-left: 35px
-  padding-right: 30px
-  padding-top: 30px
-  padding-bottom: 30px
-  margin-bottom: -20px
-  p, li, a, h1, h2, h3
-    color: #210d11 !important
-  p, li
-    font-size: 120%
   a
-    text-decoration: none !important
+    text-decoration: none
   code, pre
     color: black
     opacity: 1
