--- a/stylesheets/screen.css
+++ b/stylesheets/screen.css
@@ -33,7 +33,7 @@ h3#comments { font-size: 1.6em; }
 
 .content p { color: #3f3735; }
 
-body { line-height: 1.5; font-family: "DIN Next W01 Regular", "Verdana", sans-serif; color: black; font-size: 75%; }
+body { line-height: 1.5; font-family: "DIN Next W01 Regular", "Verdana", sans-serif; color: black; font-size: 87.5%; }
 
 h1, h2, h3, h4, h5, h6 { font-weight: normal; color: black; }
 h1 img, h2 img, h3 img, h4 img, h5 img, h6 img { margin: 0; }
@@ -149,33 +149,18 @@ form.bp select { background-color: #fff; border-width: 1px; border-style: solid;
 form.bp input.text, form.bp input.title, form.bp input[type=email], form.bp input[type=text], form.bp input[type=password] { width: 300px; }
 form.bp textarea { width: 390px; height: 250px; }
 
-.wrap-post { background-repeat: repeat-y; }
-
-.separator-post { background-repeat: repeat-y; }
-
 .meta-post { padding-top: 5px; }
 
 .meta-post-wide { padding-top: 5px; }
 
-.meta-title { margin: 0; margin-bottom: -10px; width: 655px; float: left; padding-left: 30px; }
+.meta-title { margin: 0; margin-bottom: -10px; width: 655px; float: left; }
 
 .meta-date { margin: 0; padding-left: 5px; width: 110px; float: left; }
 
-.post-content { width: 730px; padding-left: 35px; padding-right: 30px; padding-top: 30px; padding-bottom: 30px; margin-bottom: -20px; }
-.post-content p, .post-content li, .post-content a, .post-content h1, .post-content h2, .post-content h3 { color: #210d11 !important; }
-.post-content p, .post-content li { font-size: 120%; }
-.post-content a { text-decoration: none !important; }
-.post-content code, .post-content pre { color: black; opacity: 1; }
-.post-content div.highlight { padding: 5px 10px; }
-.post-content div.highlight code, .post-content div.highlight pre { color: white; }
-
-.post-content-wide { width: 730px; padding-left: 35px; padding-right: 30px; padding-top: 30px; padding-bottom: 30px; margin-bottom: -20px; }
-.post-content-wide p, .post-content-wide li, .post-content-wide a, .post-content-wide h1, .post-content-wide h2, .post-content-wide h3 { color: #210d11 !important; }
-.post-content-wide p, .post-content-wide li { font-size: 120%; }
-.post-content-wide a { text-decoration: none !important; }
-.post-content-wide code, .post-content-wide pre { color: black; opacity: 1; }
-.post-content-wide div.highlight { padding: 5px 10px; }
-.post-content-wide div.highlight code, .post-content-wide div.highlight pre { color: white; }
+.post-content a, .post-content-wide a { text-decoration: none; }
+.post-content code, .post-content pre, .post-content-wide code, .post-content-wide pre { color: black; opacity: 1; }
+.post-content div.highlight, .post-content-wide div.highlight { padding: 5px 10px; }
+.post-content div.highlight code, .post-content div.highlight pre, .post-content-wide div.highlight code, .post-content-wide div.highlight pre { color: white; }
 
 #disqus_thread p, #disqus_thread li, #disqus_thread span, #disqus_thread a, #disqus_thread h1, #disqus_thread h2, #disqus_thread h3, #disqus_thread pre, #disqus_thread code { color: #451c23 !important; font-size: 100%; }
 
