--- a/stylesheets/screen.css
+++ b/stylesheets/screen.css
@@ -31,7 +31,10 @@ h3#comments { font-size: 1.6em; }
 #footer a { color: #68454c; text-decoration: none; }
 #footer a:hover { text-decoration: underline; }
 
-.content p { color: #3f3735; }
+code { background-color: #eeeeee; border: 1px solid #cccccc; }
+
+pre, div.highlight pre { background-color: #eeeeee; border: 1px solid #cccccc; -webkit-border-radius: 2px; -moz-border-radius: 2px; -ms-border-radius: 2px; -o-border-radius: 2px; border-radius: 2px; padding: 5px; overflow: scroll; }
+pre > code, div.highlight pre > code { border: none; }
 
 body { line-height: 1.5; font-family: "DIN Next W01 Regular", "Verdana", sans-serif; color: black; font-size: 87.5%; }
 
@@ -158,9 +161,6 @@ form.bp textarea { width: 390px; height: 250px; }
 .meta-date { margin: 0; padding-left: 5px; width: 110px; float: left; }
 
 .post-content a, .post-content-wide a { text-decoration: none; }
-.post-content code, .post-content pre, .post-content-wide code, .post-content-wide pre { color: black; opacity: 1; }
-.post-content div.highlight, .post-content-wide div.highlight { padding: 5px 10px; }
-.post-content div.highlight code, .post-content div.highlight pre, .post-content-wide div.highlight code, .post-content-wide div.highlight pre { color: white; }
 
 #disqus_thread p, #disqus_thread li, #disqus_thread span, #disqus_thread a, #disqus_thread h1, #disqus_thread h2, #disqus_thread h3, #disqus_thread pre, #disqus_thread code { color: #451c23 !important; font-size: 100%; }
 
