--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,7 +5,6 @@
   <title>myabc | {{ page.title }}</title>
   <meta name="generator" content="Jekyll" />
 
-  <link href="http://fast.fonts.com/cssapi/ae5dd709-a741-4e0d-b746-cc09f435bffb.css" rel="stylesheet" type="text/css" />
   <!--[if IE]>
   <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
   <![endif]-->
@@ -16,6 +15,8 @@
   <link href="/stylesheets/ie.css" media="screen, projection" rel="stylesheet" type="text/css" />
   <![endif]-->
   <link rel="stylesheet" href="/stylesheets/jquery.tweet.css"   type="text/css" media="screen" />
+  <script type="text/javascript" src="http://use.typekit.com/bvk2vra.js"></script>
+  <script type="text/javascript">try{Typekit.load();}catch(e){}</script>
   <link rel="Shortcut Icon" type="image/x-icon" href="/favicon.ico" />
 
   <script type='text/javascript'>
