--- a/_sass/partials/_base.sass
+++ b/_sass/partials/_base.sass
@@ -9,10 +9,6 @@ $link_visited_color:  $link_color - #333
 // css class conflicts with Jekyll / Pygments
 $highlight_color: rgba(0, 0, 0, 0.5)
 
-$din-regular: 'DIN Next W01 Regular'
-$din-bold:    'DIN Next W01 Bold'
-$din-italic:  'DIN Next W01 Italic'
-
-$blueprint-font-family:       'DIN Next W01 Regular', 'Verdana', sans-serif
+$blueprint-font-family:       "ff-dagny-web-pro-1","ff-dagny-web-pro-2", 'Helvetica', sans-serif
 $blueprint-fixed-font-family: 'andale mono', 'lucida console', monospace
 $blueprint-font-size:         14px
